--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
 	},
 	"dependencies": {
+		"clsx": "^2.1.0",
 		"framer-motion": "^8.5.5",
 		"next": "^13.5.6",
 		"next-themes": "^0.2.1",
@@ -18,7 +19,8 @@
 		"react-error-boundary": "^3.1.4",
 		"react-icons": "^4.12.0",
 		"react-image-gallery": "^1.3.0",
-		"swr": "^2.2.4"
+		"swr": "^2.2.4",
+		"tailwind-merge": "^2.2.2"
 	},
 	"devDependencies": {
 		"@next/eslint-plugin-next": "^13.5.6",
